# rotor

./: Cargo.toml  OVMF_CODE_4M.fd  README.md
.cargo/: config.toml
esp/: NvVars
esp/efi/boot/: bootx64.efi
rotor/: Cargo.toml
rotor-fs/: Cargo.toml
rotor-kernel/: Cargo.toml
rotor-std/: Cargo.toml
rotor/src/: main.rs
